fix spacing on about the author/about the translator

--- a/assets/css/notepagestyle.css
+++ b/assets/css/notepagestyle.css
@@ -10,6 +10,23 @@ html,body {
 	height: 100%;
 }
 
+@media screen and (max-width: 750px) {
+
+	.note-text {
+	padding: 0px;
+	padding-right: 20px !important;
+	position: static;
+	flex: 1;
+	
+	}
+	.abio, .tbio{
+		width: 75vw !important;
+		float: none !important;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
 a {
 	text-decoration: none;
 }
